# TeenyLauncher

./: .dockerigniore  .gitignore  Dockerfile  README.md  TO_DO.txt  TeenyLauncher.spec  compile-nuitka.bat  compile-pyinstaller.bat  gui.py  main.py  main_web.py  main_window.py  pack.bat  pack.ps1  pyproject.toml  requeriments.txt  start.bat  start.py  start.sh
Main/: TeenyLauncher.py  __init__.py  main.py
Main/assets/: config.json  config.pkl  ejemplo.pkl
Main/assets/lang/: Example.json  Spanish.json  empty_example.json  en_en.json  es_es.json  example_file.json
Main/assets/scripts/: accountsHandeler.py  configHandeler.py  instancesHandeler.py
Main/scripts/: InstallAndUpdate.py  Update.py  configpkl.py  configupdate.py  mcfunctios.py  update.py
assets/lang/: English.json
assets/version-changelogs/: V0.8.0.txt
lang/: English.json  Example.json  Spanish.json
scripts/: accountHandeler.py  accountsHandeler.py  configHandeler.py  instanceHandeler.py  instancesHandeler.py  jdkHandeler.py  langHandeler.py  mainGui.py  processHandeler.py
src/: main.py  main_window.py
src/core/: __init__.py  config.py  lang.py  process.py
src/database/: __init__.py
src/lang/: Spanish.json
src/scripts/: accountHandeler.py  configHandeler.py  instanceHandeler.py  jdkHandeler.py  langHandeler.py  mainGui.py
src/services/: __init__.py  accounts.py  instances.py
src/ui/: __init__.py  accounts_ui.py  config_ui.py  info_ui.py  instances_ui.py  main_ui.py
src/utils/: __init__.py  jdk.py  utils.py
src/version-changelogs/: Thanks for download.txt
u-venv/: pyvenv.cfg
(+3 files in other folders)
