[tool.poetry]
name = "teenylauncher"
version = "0.9.0"
description = "A Minecraft launcher"
readme = "README.md"
python = "3.14"
flet = "0.80.1"
authors = [
    { name = "TeenyDesert9892", email = "teenydesert9892@gmail.com" }
]

[project]
dependencies = [
  "flet==0.26.0",
  "icecream==2.1.4",
  "install-jdk==1.1.0",
  "minecraft-launcher-lib==7.1",
  "mypy==1.15.0",
  "Nuitka==2.6.4",
  "pillow==11.1.0",
  "pyinstaller==6.11.1",
  "setuptools==75.8.0"
]

[tool.flet]
org = "com.github.teenydesert9892"
product = "teenylauncher"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.compile]
app = true
packages = true
cleanup = false

[tool.flet.app]
module = "main"
path = "src"